Fix amp bugs and cleanup

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<div class="footer-us-flag"><img src="{{ base_url }}/assets/img/us-flag.webp" width="25px" height="12.5px" /> Made Securely in the U.S.</div>
-<div class="footer-links"><a href="{{ base_url }}//terms">Terms of Use</a> &bullet; <a href="{{ base_url }}//privacy-policy">Privacy Policy</a></div>
-<img src="{{ base_url }}/assets/img/Lux-Logo-small.webp" width="51.95px" height="40px" class="footer-logo" />
+<div class="footer-us-flag"><img src="{{ site.url }}/assets/img/us-flag.webp" width="25px" height="12.5px" /> Made Securely in the U.S.</div>
+<div class="footer-links"><a href="{{ site.url }}//terms">Terms of Use</a> &bullet; <a href="{{ site.url }}//privacy-policy">Privacy Policy</a></div>
+<img src="{{ site.url }}/assets/img/Lux-Logo-small.webp" width="51.95px" height="40px" class="footer-logo" />
 <div>&copy; 2020-{{ 'now' | date: "%Y" }} Lux Health Corp.</div>
 <div class="footer-string"><span class="medium-font-weight">Lux Health</span> is a registered trademark of Lux Health Corp.  All rights reserved.</div>
