--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 
 {% if page.canonical_link %}
 <script async src="https://cdn.ampproject.org/v0.js"></script>
-<link rel="canonical" href="{{ base_url }}">
+<link rel="canonical" href="{{ site.url }}">
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 <style amp-custom>
 :root {
@@ -154,7 +154,7 @@ a.logo-link img {
 }
 
 .centered-image {
-  margin-top: 40px;
+  margin: 40px auto 0 auto;
   width: 90%;
   max-width: 1000px;
 }
@@ -422,7 +422,7 @@ footer a:hover {
 }
 </style>
 {% elsif page.amp_link %}
-<link rel="amphtml" href="{{ base_url }}/amp{{ page.amp_link }}">
+<link rel="amphtml" href="{{ site.url }}/amp{{ page.amp_link }}">
 {% endif %}
 
 {% if page.jsonld %}
@@ -440,7 +440,7 @@ footer a:hover {
 <link rel="manifest" href="/manifest.webmanifest">
 
 {% unless page.canonical_link %}
-<link rel="stylesheet" href="{{ base_url }}/assets/styles/main.css">
+<link rel="stylesheet" href="{{ site.url }}/assets/styles/main.css">
 <!-- 1) connect to domain of font files -->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
