--- a/_includes/head.html
+++ b/_includes/head.html
@@ -462,7 +462,7 @@ footer a:hover {
 	<title>{{ site.title }}</title>
 {% endif %}
 
-{% if jekyll.environment == 'production' and page.canonical_link %}
+{% if jekyll.environment == 'production' and page.amp_link %}
 	<!-- change your GA id in _config.yml -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id={{site.google_analytics}}"></script>
 	<script>
@@ -472,7 +472,7 @@ footer a:hover {
 
 		gtag('config', '{{site.google_analytics}}');
 	</script>
-{% elsif jekyll.environment == 'production' and page.amp_link %}
+{% elsif jekyll.environment == 'production' and page.canonical_link %}
 	<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 	<amp-analytics type="gtag" data-credentials="include">
 	<script type="application/json">
