[MO] Add update of homepage

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -441,6 +441,7 @@ footer a:hover {
 
 {% unless page.canonical_link %}
 <link rel="stylesheet" href="{{ site.url }}/assets/styles/main.css">
+<script  src="{{ site.url }}/assets/js/lux.js"></script>
 <!-- 1) connect to domain of font files -->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
