Add new coming soon page

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -24,14 +24,17 @@ background-image: linear-gradient(
 
 #lux-canvas {
   width:100%;
-  height:100%;
+  height:100vh;
   min-height: 300px;
-  --gradient-color-1: #42BCFA; 
+  margin: 0 auto;
+  position: absolute;
+  text-align: center;
+  --gradient-color-1: #B4BEF2; 
   /* --gradient-color-1: #ef008f;  */
   /* --gradient-color-2: #7038ff; */
-  --gradient-color-2: #4391F7; 
-  --gradient-color-3: #f1f1f1;
-  --gradient-color-4: #6ec3f4;
+  --gradient-color-2: #F8F3EE; 
+  --gradient-color-3: #ED93F7;
+  --gradient-color-4: #C4D9F5;
   /* --gradient-color-1: #EE5C5A; 
   --gradient-color-3: #4391F7; 
   --gradient-color-4: #6EC7C8;  
