--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,6 +11,13 @@ padding:0;
 overflow-x: hidden;
 }
 
+@supports(padding:max(0px)) {
+  body, header, footer {
+      padding-left: min(0vmin, env(safe-area-inset-left));
+      padding-right: min(0vmin, env(safe-area-inset-right));
+  }
+}
+
 .linearGradient {
 height: 200px;
 background-image: linear-gradient(
