--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -9,15 +9,7 @@ body {
 margin:0;
 padding:0;
 overflow-x: hidden;
-}
-
-@supports(padding:max(0px)) {
-  body, header, footer {
-    padding-top: min(0vmin, env(safe-area-inset-top));
-    padding-bottom: min(0vmin, env(safe-area-inset-bottom));
-    padding-left: min(0vmin, env(safe-area-inset-left));
-    padding-right: min(0vmin, env(safe-area-inset-right));
-  }
+min-height: -webkit-fill-available;
 }
 
 .linearGradient {
