--- a/_includes/head.html
+++ b/_includes/head.html
@@ -429,8 +429,7 @@ footer a:hover {
 	{% include {{page.jsonld}}.html %}
 {% endif %}
 
-<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-<meta name='viewport' content='initial-scale=1, '>
+<meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,viewport-fit=cover">
 <meta name="description" content="{{ page.description }}">
 <meta name="author" content="{{ site.author }}">
 <meta name="generator" content="Jekyll v4.0.0">
