--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -26,7 +26,7 @@ background-image: linear-gradient(
 #lux-canvas {
   width:100%;
   height:100vh;
-  min-height: 300px;
+  min-height: -webkit-fill-available; /* Covers the notch area. */
   margin: 0 auto;
   position: absolute;
   text-align: center;
